added main.css to genomics post

--- a/main.css
+++ b/main.css
@@ -80,6 +80,10 @@
       list-style: none;
     }
 
+    .content li {
+        margin: 1rem;
+    }
+
     .content li a {
       color:#1b1a55;
       font-size: 1.2em;
