--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@
 
     .main-layout {
       display: grid;
-      grid-template-rows: auto auto 1fr;
+      grid-template-rows: auto auto 1fr auto;
       grid-template-columns: 1fr auto 1fr;
       align-items: center;
       min-height: 100vh;
@@ -48,6 +48,17 @@
       height: auto;
       justify-self: start;
       margin-top: 5%;
+    }
+
+    .footer {
+      grid-column: 1 / 4;
+      grid-row: 4;
+      font-size: clamp(0.6rem, 0.8rem, 1rem);
+      color: darkslategrey;
+      text-align: center;
+      background: none;
+      border: none;
+      font-style: italic;
     }
 
     .title {
