--- a/main.css
+++ b/main.css
@@ -75,8 +75,7 @@
     .content {
       grid-row: 3;
       grid-column: 1 / 4;
-      width: 80vw;
-      /* width: clamp(150px, 25vw, 300px); */
+      width: clamp(300px, 50vw, 900px);
       justify-self: center;
       align-self: start;
       text-align: center;
