--- a/main.css
+++ b/main.css
@@ -203,12 +203,13 @@
   }
 
   .article .title {
+    grid-column: 1 / 4;
     grid-row: 3;
-    justify-self: start;
+    justify-self: center;
     /* align-self: end;
     max-width: 90%; */
     margin-top: 2rem;
-    text-align: center;
+    text-align: left;
   }
 
   .article .content {
@@ -219,6 +220,18 @@
     padding-right: 1rem;
     border-left: none;  */
   }
+
+  .footer {
+      grid-column: 1 / 4;
+      grid-row: 4;
+      font-size: clamp(0.6rem, 0.8rem, 1rem);
+      color: darkslategrey;
+      text-align: center;
+      background: none;
+      border: none;
+      font-style: italic;
+      align-self: end;
+    }
     
     
   }
