--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@
       /* margin-top: 6%; */
       margin-bottom: 6%;
       /* margin-left: 5%; */
-      padding-left: 2%;
+      padding-left: 5%;
       padding-right: 5%;
       padding-top: 1%;
       border-left: 1px solid darkred;
@@ -175,6 +175,8 @@
     grid-column: 1 / 3;
     grid-row: 3;
     margin-top: 2rem;
+    /* justify-self: center; */
+    text-align: left;
     /* margin: 2rem 0 3rem 0;
     padding-left: 1rem;
     padding-right: 1rem;
